--- a/style.css
+++ b/style.css
@@ -1,321 +1,40 @@
-body {
+@import url(navbar.css);
+@import url(undermain.css);
+@import url(section1.css);
+@import url(section2.css);
+@import url(footer.css);
+@import url(home.css);
+
+
+* {
   margin: 0;
   padding: 0;
-  background-color: rgb(249, 250, 215);
-}
-.nav-bar{
-
-  display: flex;
-  justify-content: space-between;
-  background-color: yellowgreen;
-}
-.left-side button{
-
-  width: 90px;
-  border-radius: 4px;
+  box-sizing: border-box;
   
 }
-.wraper button:hover{
-
-  width: 90px;
-  border-radius: 4px;
-  color: aqua;
-}
+body{
+  font-family: 'Inter', sans-serif;
 
 
-.right-side .left-side{
-
-  list-style-type: none;
-  
-}
-.right-side li, .left-side li{
-
-  display: inline-block;
-}
-.right-side li a, .left-side li a{
-
-
-  text-decoration: none;
-  display: block;
-  width: 100%;
-  font-size: 20px;
-  color: #333;
-  padding: 2px 16px;
-}
-.right-side li a{
-font-weight: bold;
-font-style: italic;
-font-size: 2em;
-color: red;
-}
-.left-side li a:hover{
-  color: aqua;
-
-}
-.left-side button:hover{
-  color: aqua;
-}
-
-.right img{
-
-  width: 600px;
-  height: 400px;
-  float: right;
-  margin: 15px 20px;
-}
-.wraper{
-
-  background-color: aliceblue;
-  height: 600px;
-}
-.info h1{
-
-  text-align: left;
-}
-.left{
-
-padding-top: 210px;
-padding-left: 50px;
-padding-right: 80px;
-  
-}
-
-.grid-container {
-  width: 60%;
-  margin: 20px auto;
-  text-align: center;
-  display: grid;
-  grid-gap: 30px;
-  grid-template-columns: repeat(3, 1fr);
-}
-
-.cards .img-muzan {
-  background-image: url("images/muzan.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-}
-.card {
-  background-color: #fff;
-  box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.2);
-}
-
-.cards .img-nezuko {
-  background-image: url("images/nezuko.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-}
-
-.sect-container{
-
-  background-color:antiquewhite;
-  height: 750px;
 }
 
 
-.grid-cards {
-  width: 60%;
-  margin: 20px auto;
-  display: grid;
-  
-  grid-gap: 30px;
-  
-  grid-template-columns: repeat(4, 1fr);
-}
 
-.card button{
+:root{
 
-  display: inline-block;
-  margin-top: auto;
-  padding: 10px 20px;
-  border-radius: 5px;
-      
-}
 
-.card{
+  --primary-color:#228898;
+  --secondary-color:#00C4EC;
 
-  flex-direction: column;
-  display: flex;
-  flex-wrap: wrap;
-  align-self: normal;
-}
-
-.card .img-inosuke {
-  background-image: url("images/inosuke.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-}
-
-.card .img-regoku {
-  background-image: url("images/regoku.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-}
-
-.card .img-Tengei {
-  background-image: url("images/Tengei.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-}
-
-.card .img-tanjiro {
-  background-image: url("images/tanjiro.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  
-}
-
-.content {
-  padding: 20px 10px;
-  text-align: center;
-}
-.text-box {
-  width: 400px;
-  margin-left: 10%;
-  gap: 50px;
-
-  text-align: left;
-  margin: 0 auto;
-  top: auto;
-  transform: translateY(32%);
-}
-
-body h1 {
-  text-align: center;
-  font-size: 50px;
-  font-size: 3em;
-}
-
-body h2 {
-  text-align: center;
-  font-size: 50px;
-  font-size: 3em;
-}
-
-body section {
-  align-items: center;
-  text-align: center;
+  --color:#9780EA;
 }
 
 
-.official-site {
-  text-align: center;
-  justify-content: left;
-}
-.official-site {
-  text-align: left;
-  padding-right: 200px;
-  margin: 10%;
-}
 
-.logo {
-  height: 10px;
-  width: 100px;
-  padding-bottom: 40px;
-}
 
-ul img {
-  width: 40px;
-  height: 40px;
-  margin-right: auto;
-}
-.buttons {
-  padding-right: 30px;
-  float: inline-end;
-}
-.buttons a:hover {
-  color: black;
-}
-.buttons a {
-  text-decoration: none;
-}
-.buttons {
-  list-style: none;
-  display: flex;
-  justify-content: center;
-}
 
-.official-site {
-  margin: 50px;
-}
-.slayer-pic {
-  height: 300px;
-  width: 300px;
-  float: right;
-  margin: auto;
-  margin: 50px ;
-  margin-right: 200px;
 
-}
 
-.official-site .slayer-pic {
-  text-align: right;
- padding-right:  -200px; 
-}
 
-.official-site {
-  text-align: left;
-  padding-right: 200px;
-  margin: 10%;
-}
-.slayer-pic img {
-  height: 40%;
-  width: 40%;
-  border-radius: 50%;
-  padding-right:  -200px;
-}
-.socials i {
-  align-content: left;
-  align-items: left;
-}
-.image-section {
-  height: 175px;
-}
-.fa-apple {
-  font-size: 70px;
-}
 
-.fa-opera {
-  font-size: 70px;
-}
-.fa-windows {
-  font-size: 70px;
-}
 
-.fa-twitter {
-  font-size: 25px;
-}
-.fa-square-instagram {
-  font-size: 25px;
-}
-.fa-facebook {
-  font-size: 25px;
-}
-footer{
-
-  height: 50px;
-  display: flex;
-  justify-content: space-between;
-  background: #9b9e00;
-}
-footer .left li{
-
-  display: inline;
-  padding : 15px;
-   
-}
-.ds a{
-  text-decoration-line: none;
-  font-size: 25px;
-  color: red;
-  font-style: italic;
-  font-weight: bold;
-}
-footer i:hover {
-  transform: translateY(-10px);
-}
